--- a/app/index.html
+++ b/app/index.html
@@ -15,19 +15,6 @@
     </head>
     <body>
     <div id="app" class="container" style="margin-top:50px">
-        <div class="hero-unit">
-            <h1>Cheerio!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>jQuery</li>
-                <li>Ember 1.0pre</li>
-                <li>Handlebars 1.0 beta</li>
-                <li>Mocha</li>
-            </ul>
-            <p>installed.</p>
-            <h3>Enjoy coding! - Yeoman</h3>
-        </div>
     </div>
 
         <!--[if lt IE 7]>
@@ -65,7 +52,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/amd-app.js -->
-    <script data-main="scripts/app" src="scripts/vendor/require.js"></script>
+    <script data-main="scripts/main" src="scripts/vendor/require.js"></script>
     <!-- endbuild -->
 </body>
 </html>
